# hs-sudoku

./: README.md  sudoku.cabal
app/: Main.hs
src/: Sudoku.hs
test/: Main.hs
