name:                sudoku
version:             0.1.0.0
license:             BSD3
author:              Author name here
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Sudoku
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , flow >= 1.0.7 && < 2
  default-language:    Haskell2010

executable sudoku
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , flow == 1.0.7
                     , sudoku
  default-language:    Haskell2010

test-suite sudoku-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Main.hs
  build-depends:       base
                     , containers
                     , hspec
                     , sudoku
  default-language:    Haskell2010
